# zero2prod

./: Cargo.toml  Dockerfile  configuration.yml  spec.yaml
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240530230719_create_subscriptions_table.sql  20240605233459_make_status_not_null_in_subscriptions.sql  20240605234527_create_subscriptions_tokens_table.sql
scripts/: build.sh  init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs
